[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Bomb.gd" type="Script" id=1]
[ext_resource path="res://Assets/Explosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/mixkit-fuel-explosion-1705.wav" type="AudioStream" id=3]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.298039, 0.298039, 0.298039, 1 )

[sub_resource type="SphereShape" id=3]

[sub_resource type="SphereShape" id=4]

[node name="Bomb" type="RigidBody"]
script = ExtResource( 1 )
explosion_force = 15.0
upward_force = 1.5
explosion_particles = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0
mix_target = 2

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="Audio" to="." method="_on_Audio_finished"]
